--- a/warehouse_mro/Dockerfile
+++ b/warehouse_mro/Dockerfile
@@ -2,10 +2,11 @@ FROM python:3.11-slim
 
 WORKDIR /app
 
-COPY . .
+COPY warehouse_mro/ ./warehouse_mro/
+COPY requirements.txt ./requirements.txt
 
-RUN pip install --no-cache-dir -r warehouse_mro/requirements.txt
+RUN pip install --no-cache-dir -r requirements.txt
 
 EXPOSE 8000
 
-CMD ["python", "warehouse_mro/app.py"]
+CMD ["gunicorn", "-b", "0.0.0.0:8000", "warehouse_mro.app:app"]
