--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,8 @@ Flask-SQLAlchemy==3.1.1
 SQLAlchemy==2.0.25
 Werkzeug==3.0.1
 gunicorn==21.2.0
-pandas==1.5.3
+pandas==2.2.2
+numpy==2.2.2
 python-dotenv==1.0.1
 pyotp==2.9.0
 reportlab==4.1.0
